更新 RWD ~ pad (未完成)

--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
 				</div>
 			</section>
 
-			<section id="game" data-aos="fade-up">
+			<section id="game">
 				<div class="container">
 					<div class="desc">
 						<p class="title-xl">Game</p>
@@ -273,52 +273,8 @@
 				</div>
 			</section>
 
-			<section id="nft" data-aos="fade-up">
+			<section id="nft">
 				<div class="container">
-					<!-- <div class="slick">
-						<div style="background-image: url(img/nft/nft-bg-01.jpg);">
-							<div class="content">
-								<img src="img/nft/nft-01.jpg">
-								<div class="caption">
-									<h4>1933 Goudey Russell Van Atta #215 PSA 8 NM-MT</h4>
-									<p>Base64 Encode Basic authentication's onl</p>
-									<ul class="tags">
-										<li>Female</li>
-										<li>Teenager</li>
-									</ul>
-									<button class="btn-tertiary btn-s">View Details</button>
-								</div>
-							</div>
-						</div>
-						<div style="background-image: url(img/nft/nft-bg-02.jpg);">
-							<div class="content">
-								<img src="img/nft/nft-02.jpg">
-								<div class="caption">
-									<h4>1933 Goudey Russell Van Atta #215 PSA 8 NM-MT</h4>
-									<p>Base64 Encode Basic authentication's onl</p>
-									<ul class="tags">
-										<li>Female</li>
-										<li>Teenager</li>
-									</ul>
-									<button class="btn-tertiary btn-s">View Details</button>
-								</div>
-							</div>
-						</div>
-						<div style="background-image: url(img/nft/nft-bg-03.jpg);">
-							<div class="content">
-								<img src="img/nft/nft-03.jpg">
-								<div class="caption">
-									<h4>1933 Goudey Russell Van Atta #215 PSA 8 NM-MT</h4>
-									<p>Base64 Encode Basic authentication's onl</p>
-									<ul class="tags">
-										<li>Female</li>
-										<li>Teenager</li>
-									</ul>
-									<button class="btn-tertiary btn-s">View Details</button>
-								</div>
-							</div>
-						</div>
-					</div> -->
 					<div class="carousel">
 						<div dir="rtl" class="swiper">
 							<div class="swiper-wrapper">
@@ -381,7 +337,7 @@
 				</div>
 			</section>
 
-			<section id="tutorial" data-aos="fade-up">
+			<section id="tutorial">
 				<div class="container">
 					<div class="title">
 						<p class="title-xl">教學</p>
@@ -475,7 +431,7 @@
 				</div>
 			</section>
 
-			<section id="zkz" data-aos="fade-up">
+			<section id="zkz">
 				<div class="container">
 					<img src="img/PieChart.png">
 				</div>
