更新 RWD ~ small-pad

--- a/index.html
+++ b/index.html
@@ -24,9 +24,9 @@
 	<!-- AOS 套件 -->
 	<link href="vendor/aos/aos.css" rel="stylesheet">
 
-	<!-- Slick 套件 -->
+	<!-- Slick 套件
 	<link rel="stylesheet" href="vendor/slick/slick.css" />
-	<link rel="stylesheet" href="vendor/slick/slick-theme.css">
+	<link rel="stylesheet" href="vendor/slick/slick-theme.css"> -->
 
 	<!-- Swiper 套件 -->
 	<link rel="stylesheet" href="vendor/swiper/swiper-bundle.min.css" />
@@ -110,10 +110,21 @@
 
 		<main>
 			<section id="keyvision">
-				<div class="slick">
-					<div><img src="img/banner01.jpg"></div>
-					<div><img src="img/banner02.jpg"></div>
-					<div><img src="img/banner03.jpg"></div>
+				<div class="swiper">
+					<div class="swiper-wrapper">
+						<div class="swiper-slide">
+							<img src="img/banner01.jpg">
+						</div>
+						<div class="swiper-slide">
+							<img src="img/banner02.jpg">
+						</div>
+						<div class="swiper-slide">
+							<img src="img/banner03.jpg">
+						</div>
+					</div>
+					<div class="swiper-button-next"></div>
+					<div class="swiper-button-prev"></div>
+					<div class="swiper-pagination"></div>
 				</div>
 				<div class="mask"></div>
 				<div class="captions">
@@ -148,127 +159,134 @@
 						<p class="body-1">Description description description description description.</p>
 						<button class="btn-secondary">View All Games</button>
 					</div>
-					<div class="slick dark">
-						<div>
-							<img src="img/game/game01.jpg">
-							<div class="hover">
-								<h4>《決勝時刻®：現代戰爭® II 2022》</h4>
-								<ul class="tags">
-									<li>tag</li>
-									<li>tag</li>
-									<li>tag</li>
-								</ul>
-								<button class="btn-tertiary">View Details</button>
+					<div class="carousel dark">
+						<div class="swiper">
+							<div class="swiper-wrapper">
+								<div class="swiper-slide">
+									<img src="img/game/game01.jpg">
+									<div class="hover">
+										<h4>《決勝時刻®：現代戰爭® II 2022》</h4>
+										<ul class="tags">
+											<li>tag</li>
+											<li>tag</li>
+											<li>tag</li>
+										</ul>
+										<button class="btn-tertiary">View Details</button>
+									</div>
+								</div>
+								<div class="swiper-slide">
+									<img src="img/game/game02.jpg">
+									<div class="hover">
+										<h4>《決勝時刻®：現代戰爭® II 2022》</h4>
+										<ul class="tags">
+											<li>tag</li>
+											<li>tag</li>
+											<li>tag</li>
+										</ul>
+										<button class="btn-tertiary">View Details</button>
+									</div>
+								</div>
+								<div class="swiper-slide">
+									<img src="img/game/game03.jpg">
+									<div class="hover">
+										<h4>《決勝時刻®：現代戰爭® II 2022》</h4>
+										<ul class="tags">
+											<li>tag</li>
+											<li>tag</li>
+											<li>tag</li>
+										</ul>
+										<button class="btn-tertiary">View Details</button>
+									</div>
+								</div>
+								<div class="swiper-slide">
+									<img src="img/game/game04.jpg">
+									<div class="hover">
+										<h4>《決勝時刻®：現代戰爭® II 2022》</h4>
+										<ul class="tags">
+											<li>tag</li>
+											<li>tag</li>
+											<li>tag</li>
+										</ul>
+										<button class="btn-tertiary">View Details</button>
+									</div>
+								</div>
+								<div class="swiper-slide">
+									<img src="img/game/game05.jpg">
+									<div class="hover">
+										<h4>《決勝時刻®：現代戰爭® II 2022》</h4>
+										<ul class="tags">
+											<li>tag</li>
+											<li>tag</li>
+											<li>tag</li>
+										</ul>
+										<button class="btn-tertiary">View Details</button>
+									</div>
+								</div>
+								<div class="swiper-slide">
+									<img src="img/game/game06.jpg">
+									<div class="hover">
+										<h4>《決勝時刻®：現代戰爭® II 2022》</h4>
+										<ul class="tags">
+											<li>tag</li>
+											<li>tag</li>
+											<li>tag</li>
+										</ul>
+										<button class="btn-tertiary">View Details</button>
+									</div>
+								</div>
+								<div class="swiper-slide">
+									<img src="img/game/game07.jpg">
+									<div class="hover">
+										<h4>《決勝時刻®：現代戰爭® II 2022》</h4>
+										<ul class="tags">
+											<li>tag</li>
+											<li>tag</li>
+											<li>tag</li>
+										</ul>
+										<button class="btn-tertiary">View Details</button>
+									</div>
+								</div>
+								<div class="swiper-slide">
+									<img src="img/game/game08.jpg">
+									<div class="hover">
+										<h4>《決勝時刻®：現代戰爭® II 2022》</h4>
+										<ul class="tags">
+											<li>tag</li>
+											<li>tag</li>
+											<li>tag</li>
+										</ul>
+										<button class="btn-tertiary">View Details</button>
+									</div>
+								</div>
+								<div class="swiper-slide">
+									<img src="img/game/game09.jpg">
+									<div class="hover">
+										<h4>《決勝時刻®：現代戰爭® II 2022》</h4>
+										<ul class="tags">
+											<li>tag</li>
+											<li>tag</li>
+											<li>tag</li>
+										</ul>
+										<button class="btn-tertiary">View Details</button>
+									</div>
+								</div>
+								<div class="swiper-slide">
+									<img src="img/game/game10.jpg">
+									<div class="hover">
+										<h4>《決勝時刻®：現代戰爭® II 2022》</h4>
+										<ul class="tags">
+											<li>tag</li>
+											<li>tag</li>
+											<li>tag</li>
+										</ul>
+										<button class="btn-tertiary">View Details</button>
+									</div>
+								</div>
 							</div>
 						</div>
-						<div>
-							<img src="img/game/game02.jpg">
-							<div class="hover">
-								<h4>《決勝時刻®：現代戰爭® II 2022》</h4>
-								<ul class="tags">
-									<li>tag</li>
-									<li>tag</li>
-									<li>tag</li>
-								</ul>
-								<button class="btn-tertiary">View Details</button>
-							</div>
-						</div>
-						<div>
-							<img src="img/game/game03.jpg">
-							<div class="hover">
-								<h4>《決勝時刻®：現代戰爭® II 2022》</h4>
-								<ul class="tags">
-									<li>tag</li>
-									<li>tag</li>
-									<li>tag</li>
-								</ul>
-								<button class="btn-tertiary">View Details</button>
-							</div>
-						</div>
-						<div>
-							<img src="img/game/game04.jpg">
-							<div class="hover">
-								<h4>《決勝時刻®：現代戰爭® II 2022》</h4>
-								<ul class="tags">
-									<li>tag</li>
-									<li>tag</li>
-									<li>tag</li>
-								</ul>
-								<button class="btn-tertiary">View Details</button>
-							</div>
-						</div>
-						<div>
-							<img src="img/game/game05.jpg">
-							<div class="hover">
-								<h4>《決勝時刻®：現代戰爭® II 2022》</h4>
-								<ul class="tags">
-									<li>tag</li>
-									<li>tag</li>
-									<li>tag</li>
-								</ul>
-								<button class="btn-tertiary">View Details</button>
-							</div>
-						</div>
-						<div>
-							<img src="img/game/game06.jpg">
-							<div class="hover">
-								<h4>《決勝時刻®：現代戰爭® II 2022》</h4>
-								<ul class="tags">
-									<li>tag</li>
-									<li>tag</li>
-									<li>tag</li>
-								</ul>
-								<button class="btn-tertiary">View Details</button>
-							</div>
-						</div>
-						<div>
-							<img src="img/game/game07.jpg">
-							<div class="hover">
-								<h4>《決勝時刻®：現代戰爭® II 2022》</h4>
-								<ul class="tags">
-									<li>tag</li>
-									<li>tag</li>
-									<li>tag</li>
-								</ul>
-								<button class="btn-tertiary">View Details</button>
-							</div>
-						</div>
-						<div>
-							<img src="img/game/game08.jpg">
-							<div class="hover">
-								<h4>《決勝時刻®：現代戰爭® II 2022》</h4>
-								<ul class="tags">
-									<li>tag</li>
-									<li>tag</li>
-									<li>tag</li>
-								</ul>
-								<button class="btn-tertiary">View Details</button>
-							</div>
-						</div>
-						<div>
-							<img src="img/game/game09.jpg">
-							<div class="hover">
-								<h4>《決勝時刻®：現代戰爭® II 2022》</h4>
-								<ul class="tags">
-									<li>tag</li>
-									<li>tag</li>
-									<li>tag</li>
-								</ul>
-								<button class="btn-tertiary">View Details</button>
-							</div>
-						</div>
-						<div>
-							<img src="img/game/game10.jpg">
-							<div class="hover">
-								<h4>《決勝時刻®：現代戰爭® II 2022》</h4>
-								<ul class="tags">
-									<li>tag</li>
-									<li>tag</li>
-									<li>tag</li>
-								</ul>
-								<button class="btn-tertiary">View Details</button>
-							</div>
-						</div>
+						<div class="swiper-button-prev"></div>
+						<div class="swiper-button-next"></div>
+						<div class="swiper-pagination"></div>
 					</div>
 				</div>
 			</section>
@@ -439,6 +457,7 @@
 		</main>
 
 		<footer>
+			<div class="mask"></div>
 			<ul class="sns">
 				<li>
 					<button class="btn-rounded"><i class="icon-Twitter"></i></button>
@@ -504,19 +523,68 @@
 		});
 	</script>
 
-	<!-- Slick 套件 -->
+	<!-- Slick 套件
 	<script src="vendor/slick/slick.min.js"></script>
-	<script src="js/slick-custom.js"></script>
+	<script src="js/slick-custom.js"></script> -->
 
 	<!-- Swiper 套件 -->
 	<script src="vendor/swiper/swiper-bundle.min.js"></script>
 	<script type="text/javascript">
-		var isComingSoon = $('.swiper').hasClass('coming-soon');
+		// Key Vision 輪播
+		var swiperKV = new Swiper('#keyvision .swiper', {
+			loop: true,
+			slidesPerView: 0.5,
+			centeredSlides: true,
+			navigation: {
+				nextEl: "#keyvision .swiper-button-next",
+				prevEl: "#keyvision .swiper-button-prev",
+			},
+			pagination: {
+				el: "#keyvision .swiper-pagination",
+				clickable: true,
+			},
+			on: {
+				slideChange: function () {
+					var realIndex = this.realIndex;
+					$('#keyvision .captions div').removeClass('active');
+					$('#keyvision .captions div').eq(realIndex).addClass('active');
+				},
+			},
+			breakpoints: {
+				769: {
+					slidesPerView: 1,
+				},
+			},
+		});
 
-		var swiperNFT = new Swiper('.swiper', {
+		// Game 輪播
+		var swiperKV = new Swiper('#game .swiper', {
+			spaceBetween: 20,
+			slidesPerView: 2,
+			slidesPerGroup: 2,
+			navigation: {
+				nextEl: "#game .swiper-button-next",
+				prevEl: "#game .swiper-button-prev",
+			},
+			pagination: {
+				el: "#game .swiper-pagination",
+				clickable: true,
+			},
+			breakpoints: {
+				769: {
+					slidesPerView: 3,
+					slidesPerGroup: 3,
+				},
+			},
+		});
+
+		// NFT 輪播
+		var isComingSoon = $('#nft .swiper').hasClass('coming-soon');
+
+		var swiperNFT = new Swiper('#nft .swiper', {
 			effect: "coverflow",
 			spaceBetween: -130,
-			slidesPerView: 2.5,
+			slidesPerView: 1.3,
 			loop: true,
 			allowSlideNext: !isComingSoon,
 			allowSlidePrev: !isComingSoon,
@@ -528,11 +596,11 @@
 				slideShadows: false,
 			},
 			navigation: {
-				nextEl: ".swiper-button-next",
-				prevEl: ".swiper-button-prev",
+				nextEl: "#nft .swiper-button-next",
+				prevEl: "#nft .swiper-button-prev",
 			},
 			pagination: {
-				el: ".swiper-pagination",
+				el: "#nft .swiper-pagination",
 				clickable: !isComingSoon,
 			},
 			on: {
@@ -542,6 +610,7 @@
 			},
 			breakpoints: {
 				769: {
+					slidesPerView: 2.5,
 				},
 				1281: {
 					spaceBetween: -150,
@@ -550,7 +619,7 @@
 		});
 
 		if (isComingSoon) {
-			$('.swiper-button-prev, .swiper-button-next').addClass('swiper-button-disabled');
+			$('#nft .swiper-button-prev, #nft .swiper-button-next').addClass('swiper-button-disabled');
 		}
 	</script>
 </body>
