商城、遊戲、個人資訊頁切版完成

--- a/game.html
+++ b/game.html
@@ -67,8 +67,8 @@
                 <button class="menu"></button>
                 <div class="nav">
                     <ul>
-                        <li>商城</li>
-                        <li onclick="location='game.html'">Game</li>
+                        <li onclick="location='shop.html'">商城</li>
+                        <li>Game</li>
                         <li onclick="location='index.html#nft'">NFT</li>
                         <li onclick="location='index.html#tutorial'">教學</li>
                         <li onclick="location='index.html#zkz'">$ZKZ</li>
@@ -104,32 +104,132 @@
         <main>
             <ul class="breadcrumb">
                 <li>首頁</li>
-                <li>商城</li>
+                <li>Game</li>
             </ul>
 
-            <section id="shop">
+            <section id="game">
                 <div class="container">
-                    <h3>商城</h3>
-                    <ul class="product-list">
-                        <li>
+                    <h3>Game</h3>
+                    <ul class="game-list">
+                        <li onclick="location='game-detail.html'">
                             <div class="img">
-                                <img src="img/product01.jpg">
+                                <img src="img/game/game-item-01.jpg">
                             </div>
-                            <div class="content">
-                                <h3>白單/公售 dNFT</h3>
-                                <p>商品說明商品說明商品商品說明商品說明商品商品說明商品說明商品商品說明商品說明商品商品說明商品說明商品</p>
-                                <button onclick="location='shop-detail.html'">查看商品</button>
-                            </div>
+                            <h4>Coin Matching</h4>
+                            <ul class="tags">
+                                <li>tag</li>
+                                <li>tag</li>
+                                <li>tag</li>
+                            </ul>
+                            <button class="btn-tertiary">View Details</button>
                         </li>
                         <li>
                             <div class="img">
-                                <img src="img/product02.jpg">
+                                <img src="img/game/game-item-02.jpg">
                             </div>
-                            <div class="content">
-                                <h3>盲盒 dNFT</h3>
-                                <p>商品說明商品說明商品商品說明商品說明商品商品說明商品說明商品商品說明商品說明商品商品說明商品說明商品</p>
-                                <button onclick="location='shop-detail.html'">查看商品</button>
+                            <h4>《決勝時刻®：現代戰爭® II 2022》</h4>
+                            <ul class="tags">
+                                <li>tag</li>
+                                <li>tag</li>
+                                <li>tag</li>
+                            </ul>
+                            <button class="btn-tertiary">View Details</button>
+                        </li>
+                        <li>
+                            <div class="img">
+                                <img src="img/game/game-item-03.jpg">
                             </div>
+                            <h4>Coin Matching</h4>
+                            <ul class="tags">
+                                <li>tag</li>
+                                <li>tag</li>
+                                <li>tag</li>
+                            </ul>
+                            <button class="btn-tertiary">View Details</button>
+                        </li>
+                        <li>
+                            <div class="img">
+                                <img src="img/game/game-item-04.jpg">
+                            </div>
+                            <h4>Coin Matching</h4>
+                            <ul class="tags">
+                                <li>tag</li>
+                                <li>tag</li>
+                                <li>tag</li>
+                            </ul>
+                            <button class="btn-tertiary">View Details</button>
+                        </li>
+                        <li>
+                            <div class="img">
+                                <img src="img/game/game01.jpg">
+                            </div>
+                            <h4>Coin Matching</h4>
+                            <ul class="tags">
+                                <li>tag</li>
+                                <li>tag</li>
+                                <li>tag</li>
+                            </ul>
+                            <button class="btn-tertiary">View Details</button>
+                        </li>
+                        <li>
+                            <div class="img">
+                                <img src="img/game/game02.jpg">
+                            </div>
+                            <h4>Coin Matching</h4>
+                            <ul class="tags">
+                                <li>tag</li>
+                                <li>tag</li>
+                                <li>tag</li>
+                            </ul>
+                            <button class="btn-tertiary">View Details</button>
+                        </li>
+                        <li>
+                            <div class="img">
+                                <img src="img/game/game03.jpg">
+                            </div>
+                            <h4>Coin Matching</h4>
+                            <ul class="tags">
+                                <li>tag</li>
+                                <li>tag</li>
+                                <li>tag</li>
+                            </ul>
+                            <button class="btn-tertiary">View Details</button>
+                        </li>
+                        <li>
+                            <div class="img">
+                                <img src="img/game/game04.jpg">
+                            </div>
+                            <h4>Coin Matching</h4>
+                            <ul class="tags">
+                                <li>tag</li>
+                                <li>tag</li>
+                                <li>tag</li>
+                            </ul>
+                            <button class="btn-tertiary">View Details</button>
+                        </li>
+                        <li>
+                            <div class="img">
+                                <img src="img/game/game05.jpg">
+                            </div>
+                            <h4>Coin Matching</h4>
+                            <ul class="tags">
+                                <li>tag</li>
+                                <li>tag</li>
+                                <li>tag</li>
+                            </ul>
+                            <button class="btn-tertiary">View Details</button>
+                        </li>
+                        <li>
+                            <div class="img">
+                                <img src="img/game/game06.jpg">
+                            </div>
+                            <h4>Coin Matching</h4>
+                            <ul class="tags">
+                                <li>tag</li>
+                                <li>tag</li>
+                                <li>tag</li>
+                            </ul>
+                            <button class="btn-tertiary">View Details</button>
                         </li>
                     </ul>
                 </div>
@@ -149,6 +249,28 @@
         </footer>
 
 
+
+
+        <!-- pop up 系統通知 -->
+        <div id="failed" class="popUp">
+            <div class="popUp--container">
+                <button class="popUp--close"><i class="icon-Close"></i></button>
+                <h3>系統通知</h3>
+                <div class="popUp--content">
+                    <p>糟糕，購買發生異常，請確認以下可能狀況：</p>
+                    <ol>
+                        <li>當前是否為商品銷售時間</li>
+                        <li>錢包內是否有充足餘額</li>
+                        <li>錢包是否設定為zkSync主網</li>
+                        <li>其他問題</li>
+                    </ol>
+                    <p>如持續發生異常，請與我們聯繫，謝謝您！</p>
+                </div>
+                <div class="popUp--btns">
+                    <button class="submit">確認</button>
+                </div>
+            </div>
+        </div>
 
 
         <!-- pop up 連接錢包 -->
@@ -192,6 +314,7 @@
     <script src="js/tab.js"></script>
     <script src="js/popUp.js"></script>
     <script src="js/connect-wallet.js"></script>
+    <script src="js/progress.js"></script>
 </body>
 
 </html>
